log
Thu 28 Sep 2023 05:17:33 PM UTC: 
 heap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  1|3
total_score: 10/70
b5bc38f
Thu 28 Sep 2023 05:29:27 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:15: error: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   22 |   void* top = pq->heapArray->priority;
      |               ^~
cc1: all warnings being treated as errors
Compilation failed
081e8ff
Thu 28 Sep 2023 05:29:44 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:15: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   22 |   void* top = (void*)pq->heapArray->priority;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
69e4dd9
Thu 28 Sep 2023 05:30:29 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
697641a
Thu 28 Sep 2023 05:31:03 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
6a1d020
Thu 28 Sep 2023 05:36:47 PM UTC: 
 heap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:36:6: error: expected expression before ‘)’ token
   36 |   if()
      |      ^
Compilation failed
fcf6f12
Thu 28 Sep 2023 05:36:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:36:6: error: expected expression before ‘)’ token
   36 |   if(){}
      |      ^
Compilation failed
a8a10df
Thu 28 Sep 2023 05:43:54 PM UTC: 
 heap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:12: error: operation on ‘pq->size’ may be undefined [-Werror=sequence-point]
   35 |   pq->size = pq->size++;
      |   ~~~~~~~~~^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b6b936c
Thu 28 Sep 2023 05:44:25 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
cc787ad
Thu 28 Sep 2023 05:51:55 PM UTC: 
 heap.c | 29 ++++++++++++++++++++---------
 1 file changed, 20 insertions(+), 9 deletions(-)
 tests:  4|2
total_score: 30/70
e95fe56
Thu 28 Sep 2023 05:53:41 PM UTC: 
 heap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 45/70
6847755
Thu 28 Sep 2023 07:22:57 PM UTC: 
 heap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  8|0
total_score: 70/70
e773fee
Thu 28 Sep 2023 07:24:24 PM UTC: 
 heap.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
 tests:  8|0
total_score: 70/70
2f1bafa
